Add Graphviz package import

--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 \usepackage{enumitem} % used for setting default enumerate label to letters e.g. (a), (b), etc.
 \usepackage{fullpage} % make margins smaller
 \usepackage{graphicx} % for embedding images
+\usepackage[pdf]{graphviz} % for pretty graphs
 \usepackage{hyperref} % clickable and styled links
 \usepackage[utf8]{inputenc} % enable non-ASCII characters
 \usepackage{minted} % code highlighting
