Add --shell-escape to list of default args (for minted, graphiz...)

--- a/main.tex
+++ b/main.tex
@@ -75,3 +75,7 @@ If Jack eats 2 apples, Jane and Jack together have $5 - 2 = 3$ apples.
 \input{1.1.1.tex}
 
 \end{document}
+
+%%% Local Variables: 
+%%% TeX-command-extra-options: "-shell-escape"
+%%% End:
