Add argmax and argmin operators

--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,10 @@
 % Disable page numbering
 \pagenumbering{gobble}
 
+% Math macros
+\DeclareMathOperator*{\argmax}{argmax}
+\DeclareMathOperator*{\argmin}{argmin}
+
 \begin{document}
 
 % Import your problem files here
